setup complete-index rendered

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Wiki</title>
-    <link rel="stylesheet" href="css/site.css">
+    <link rel="stylesheet" href="../css/site.css">
 </head>
 
 <body>
@@ -15,8 +15,8 @@
             </div>
 
             <nav>
-                <a href="index.html">Main Page</a>
-                <a href="all-articles.html">All Articles</a>
+                <a href="/">Main Page</a>
+                <a href="/all-articles.html">All Articles</a>
                 <form>
                     <input type="text">
                     <input type="submit" value="Search">
