--- a/views/article.hbs
+++ b/views/article.hbs
@@ -4,7 +4,7 @@
 <div class="spacer">
     <h2>Astronomy
         <div class="controls">
-            <a href="/all-articles/editArticle/123">[edit]</a>
+            <a href="/editArticle/123">[edit]</a>
             <a href="/deleteArticle/123">[delete]</a> {{!-- this will be a route with no hbs, also 123 will become {{_id}} --}}
         </div>
     </h2>
