--- a/views/createArticle.hbs
+++ b/views/createArticle.hbs
@@ -5,7 +5,7 @@
 <section>
     <h2>Create new article</h2>
     <div class="spacer">
-        <form>
+        <form action="/createArticle" method="POST">
             <label>Article title</label>
             <input type="text" class="title" />
             <label>Content</label>
