edit post functional-updates db

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -11,7 +11,7 @@
             explosions, gamma ray bursts,&hellip;
         </p>
         <div class="controls">
-            <a href="article.html">Read more</a>
+            <a href="all-articles/123">Read more</a>
         </div>
     </article>
     <article>
@@ -23,7 +23,7 @@
             applications and astronomy,&hellip;
         </p>
         <div class="controls">
-            <a href="article.html">Read more</a>
+            <a href="all-articles/123">Read more</a>
         </div>
     </article>
     <article>
@@ -34,7 +34,7 @@
             region of planetesimals,&hellip;
         </p>
         <div class="controls">
-            <a href="article.html">Read more</a>
+            <a href="all-articles/123">Read more</a>
         </div>
     </article>
 </section>
