--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Wiki</title>
-    <link rel="stylesheet" href="../css/site.css">
+    <link rel="stylesheet" href="/css/site.css">
     <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.jpg" />
 </head>
 
@@ -12,7 +12,7 @@
     <div>
         <aside>
             <div class="center">
-                <img class="logo" src="img/logo.png" alt="logo">
+                <img class="logo" src="/img/logo.png" alt="logo">
             </div>
 
             <nav>
