delete post functional-deletes from db-modified routes; fixed css path

--- a/views/article.hbs
+++ b/views/article.hbs
@@ -4,8 +4,8 @@
 <div class="spacer">
     <h2>Astronomy
         <div class="controls">
-            <a href="/editArticle/123">[edit]</a>
-            <a href="/deleteArticle/123">[delete]</a> {{!-- this will be a route with no hbs, also 123 will become {{_id}} --}}
+            <a href="/all-articles/edit-article/123">[edit]</a>
+            <a href="/all-articles/delete-article/123">[delete]</a> {{!-- this will be a route with no hbs, also 123 will become {{_id}} --}}
         </div>
     </h2>
     <article>
