--- a/views/createArticle.hbs
+++ b/views/createArticle.hbs
@@ -5,7 +5,7 @@
 <section>
     <h2>Create new article</h2>
     <div class="spacer">
-        <form action="/createArticle" method="POST">
+        <form action="/create-article" method="POST">
             <label for="title">Article title</label>
             <input type="text" class="title" name="title" value="" />
             <label>Content</label>
