--- a/views/deleteArticle.hbs
+++ b/views/deleteArticle.hbs
@@ -1,8 +1,8 @@
 <h1>Welcome to KingUni Wiki!</h1>
 <section>
-    <h2>Edit article</h2>
+    <h2>Delete article</h2>
     <div class="spacer">
-        <form action="/all-articles/edit-article/123" method="POST">
+        <form action="/all-articles/delete-article/123" method="POST">
             <label for="title">Article title</label>
             <h3>Astronomy</h3>
             <label for="description">Content</label>
@@ -16,7 +16,7 @@ Professional astronomy is split into observational and theoretical branches. Obs
 Astronomy is one of the few sciences where amateurs still play an active role, especially in the discovery and observation of transient phenomena. Amateur astronomers have made and contributed to many important astronomical discoveries, such as finding new comets.
                             </textarea
             >
-            <input type="submit" value="Submit" />
+            <input type="submit" value="Delete" />
         </form>
     </div>
 </section>
