--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -22,7 +22,7 @@
                     <input type="text">
                     <input type="submit" value="Search">
                 </form>
-                <a href="/createArticle">Create New Article</a>
+                <a href="/create-article">Create New Article</a>
             </nav>
         </aside>
         <div id="container">
