--- a/views/all-articles.hbs
+++ b/views/all-articles.hbs
@@ -3,21 +3,7 @@
     <h2>All articles</h2>
     <div class="spacer">
         <ul>
-            <li>
-                <a href="/all-articles/123">Astronomy</a> {{!-- future route will be {{_id}} from DB --}}
-            </li>
-            <li>
-                <a href="/all-articles/123">Galaxy</a>
-            </li>
-            <li>
-                <a href="/all-articles/123">Planet</a>
-            </li>
-            <li>
-                <a href="/all-articles/123">Star</a>
-            </li>
-            <li>
-                <a href="/all-articles/123">Telescope</a>
-            </li>
+            {{> articleLink}}
         </ul>
     </div>
 </section>
