added nav bar template

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -15,15 +15,7 @@
                 <img class="logo" src="/img/logo.png" alt="logo">
             </div>
 
-            <nav>
-                <a href="/">Main Page</a>
-                <a href="/all-articles">All Articles</a>
-                <form>
-                    <input type="text">
-                    <input type="submit" value="Search">
-                </form>
-                <a href="/create-article">Create New Article</a>
-            </nav>
+            {{> nav}}
         </aside>
         <div id="container">
             {{> headerGuest}}
