--- a/views/article.hbs
+++ b/views/article.hbs
@@ -1,10 +1,11 @@
 <h1>Welcome to KingUni Wiki!</h1>
 <div class="spacer">
     <h2>Astronomy
-        <div class="controls">
+        {{!-- <div class="controls">
             <a href="/all-articles/edit-article/123">[edit]</a>
             <a href="/all-articles/delete-article/123">[delete]</a> {{!-- this will be a route with no hbs, also 123 will become {{_id}} --}}
-        </div>
+       {{!--  </div> --}}  
+       {{!-- for user --}}
     </h2>
     <article>
         {{> paragraphElem}}
