--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -5,7 +5,7 @@
         <input type="text">
         <input type="submit" value="Search">
     </form>
-    <a href="/create-article">Create New Article</a>
+   {{!--  <a href="/create-article">Create New Article</a>  for user --}}
 </nav>
 
 {{!-- need hbs if statement for user --}}
