--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,7 +1,5 @@
 <h1>Welcome to KingUni Wiki!</h1>
-<section id="notifications">
-    <p>Both passwords should be the same...</p>
-</section>
+{{!-- {{> notify}} error handling --}}
 <section>
     <h2>Register</h2>
     <div class="spacer">
