--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -18,7 +18,7 @@
             {{> nav}}
         </aside>
         <div id="container">
-            {{> headerGuest}}
+            {{> header}}
             <main>
                 {{{body}}}
             </main>
