--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -14,8 +14,8 @@
             <div class="center">
                 <img class="logo" src="/img/logo.png" alt="logo">
             </div>
-
-            {{> nav}}
+            
+            {{> nav user}}
         </aside>
         <div id="container">
             {{> header}}
