--- a/views/login.hbs
+++ b/views/login.hbs
@@ -3,11 +3,11 @@
 <section>
     <h2>Login</h2>
     <div class="spacer">
-        <form>
-            <label>Username:</label>
-            <input type="text">
-            <label>Password:</label>
-            <input type="password">
+        <form action="/login" method="POST">
+            <label for="username">Username:</label>
+            <input type="text" placeholder="Username" name="username" value="">
+            <label for="password">Password:</label>
+            <input type="password" placeholder="Password" name="password" value="">
             <input type="submit" value="Login">
         </form>
     </div>
