--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -5,7 +5,7 @@
         <input type="text">
         <input type="submit" value="Search">
     </form>
-    {{#if _id}}
+    {{#if data.validUser}}
     <a href="/create-article">Create New Article</a>
     {{/if}}
 </nav>
