--- a/views/partials/paragraphElem.hbs
+++ b/views/partials/paragraphElem.hbs
@@ -1,11 +1,5 @@
 <p>
-    [Should be full article] Astronomy is a natural science that studies celestial objects and phenomena. It applies mathematics,
-    physics, and chemistry,
-    in an effort to explain the origin of those objects and phenomena and their evolution. Objects
-    of interest include planets, moons, stars, galaxies, and comets; the phenomena include supernova
-    explosions, gamma ray bursts, and cosmic microwave background radiation. More generally, all
-    phenomena that originate outside Earth's atmosphere are within the purview of astronomy. A related
-    but distinct subject, physical cosmology, is concerned with the study of the Universe as a whole
+    {{article.description}}
 </p>
 
 {{!-- 
