--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -15,7 +15,7 @@
                 <img class="logo" src="/img/logo.png" alt="logo">
             </div>
             
-            {{> nav user}}
+            {{> nav}}
         </aside>
         <div id="container">
             {{> header}}
