--- a/views/partials/articlePreview.hbs
+++ b/views/partials/articlePreview.hbs
@@ -1,17 +1,16 @@
-<article>
-    <h3>Astronomy</h3>
+{{#with data}}
+    {{#each allArticles}}
+    <article>
+    <h3>{{title}}</h3>
     <p>
-        Astronomy is a natural science that studies celestial objects and phenomena. It applies mathematics,
-        physics, and chemistry,
-        in an effort to explain the origin of those objects and phenomena and their evolution. Objects
-        of interest include planets, moons, stars, galaxies, and comets; the phenomena include supernova
-        explosions, gamma ray bursts,&hellip;
+        {{description}}
     </p>
     <div class="controls">
-        <a href="all-articles/123">Read more</a>
+        <a href="/all-articles/{{_id}}">Read more</a>
     </div>
 </article>
-
+    {{/each}}
+{{/with}}
 
 {{!-- 
 
