--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,7 +1,7 @@
 <header>
     {{#if data.validUser._id}}
     <span>Welcome, Bob!</span>
-    <a href="/logout">[Logout]</a>
+    <a href="/logout">Logout</a>
     {{else}}
     <a href="/login">Login</a>
     <a href="/register">Register</a>
